--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 #footer {
+  width: 100%;
   margin: 4rem 0 0;
   padding: 2rem 0;
   font-size: 1.4rem;
